sonar处理